<resources>
    <string name="app_name">Inventory App</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="quantity">Quantity</string>
    <string name="supplierEmail">Supplier Contact</string>
    <string name="validation">Cannot be empty</string>
    <string name="validation_number">Enter valid number (1-99999)</string>
    <string name="add_new_product">Add New Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="sale">Sale</string>
    <string name="order_more">Order More</string>
    <string name="reduce">Reduce</string>
    <string name="increase">Add</string>
    <string name="update">Add or reduce quantity by</string>
    <string name="product_image">Product Image</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="details">Details</string>
    <string name="list_empty_message">There are no products at the moment. Please add some using the \'+\' button in top right corner.</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirmation">"Are you sure you want to delete "</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="question_mark">\?</string>
    <string name="delete_success">Deletion Successful</string>
    <string name="delete_error">Error deleting</string>
    <string name="no_stock">Product not in stock!</string>
    <string name="grant">Grant</string>
    <string name="message_permission">This app requires your permission to access storage to browse and upload product images</string>
    <string name="take_app_settings">This permission was required to browse and take product images. You can enable this from settings. Or the app will assign a default image to the product</string>
    <string name="permission_title">Permission Request</string>
    <string name="purchase_order">"Purchase Order "</string>
    <string name="shipment_request">"Please send the next shipment for "</string>
    <string name="no_apps_found">No apps found to handle this request</string>
    <string name="sample">sample</string>
    <string name="update_price">Update Price</string>
    <string name="save_product">Save Product</string>
    <string name="valid_email_message">Enter valid email address</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="date_time_format">yyyyMMdd_HHmmss</string>
    <string name="jpeg">JPEG_</string>
    <string name="content">content://</string>
</resources>
