<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ListItemLabelStyle"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize20"
                tools:text="Name of Product" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ListItemLabelStyle"
                android:text="@string/price" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize15"
                tools:text="@string/price" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ListItemLabelStyle"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/quantity" />
        </LinearLayout>

        <Button
            android:id="@+id/bTrackSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="@dimen/size100"
            android:layout_height="@dimen/size100"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>
</LinearLayout>